	PR c/28706 	PR c/28712 	* tree.c (merge_attributes, attribute_list_contained): If both 	TREE_VALUEs are TREE_LISTs, use simple_cst_list_equal instead of 	simple_cst_equal. 	* c-typeck.c (comptypes_internal): Don't consider aggregates 	in different TUs as compatible if there one set of attributes is 	not a subset of the other type's attributes. 	(composite_type): Try harder not to create a new aggregate type.

* gcc.dg/pr28706.c: New test.
	* gcc.dg/pr28712.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117167 138bc75d-0d04-0410-961f-82ee72b054a4